<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#AEC8F5"
    android:gravity="center" >
    
    <Button
        android:id="@+id/easyPuzzleButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="100dp"
        android:text="@string/easy_puzzle_button"
        android:background="@layout/custom_button"
        android:layout_weight="1" 
        />
    
    <Button
        android:id="@+id/normalPuzzleButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="2dp"
        android:text="@string/normal_puzzle_button"
        android:background="@layout/custom_button"
        android:layout_weight="1"/>
    
    <Button
        android:id="@+id/difficultPuzzleButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="2dp"
        android:text="@string/difficult_puzzle_button"
        android:background="@layout/custom_button" 
        android:layout_weight="1" />
    
    <Button
        android:id="@+id/veryDifPuzzleButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="2dp"
        android:text="@string/very_difficult_puzzle_button"
        android:background="@layout/custom_button"
        android:layout_weight="1"/>
    
    <Button
        android:id="@+id/customPuzzleButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="2dp"
        android:text="@string/custom_puzzle_button"
        android:background="@layout/custom_button"
        android:visibility="invisible"
        android:layout_weight="1"  />
    
    <Button
        android:id="@+id/exitButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="100dp"
        android:text="@string/exit_button"
        android:background="@layout/custom_button"
        android:layout_weight="1"  />
    

</LinearLayout>
